--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.6",
-        "vite": "^2.9.14"
+        "vite": "^2.9.14",
+        "webpack": "^5.73.0",
+        "webpack-cli": "^4.10.0"
     }
 }
