--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "vite": "^2.9.14",
         "webpack": "^5.73.0",
         "webpack-cli": "^4.10.0"
+    },
+    "dependencies": {
+        "flowbite": "^1.5.1"
     }
 }
