--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/sharedworker": "^0.0.78",
         "add": "^2.0.6",
         "flowbite": "^1.5.1",
+        "flowbite-datepicker": "^1.2.2",
         "or": "^0.2.0",
         "pnpm": "^7.8.0",
         "yarn": "^1.22.19"
